--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	</modules>
 
 	<properties>
+<maven.compiler.source>1.8</maven.compiler.source>
+<maven.compiler.target>1.8</maven.compiler.target>
 		<java.compiler.version>1.8</java.compiler.version>
 	</properties>
 
